samples/_failures_safe/1761485991_bbc466_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e319c2c.c: In function ‘main’:
./samples/SAFE/__tmp_6e319c2c.c:164:9: error: expected declaration or statement at end of input
  164 |         printf("No valid log entries to analyze\n");
      |         ^~~~~~
./samples/SAFE/__tmp_6e319c2c.c:164:9: error: expected declaration or statement at end of input
